Minor fix for missing background on search button

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -278,6 +278,7 @@ a.add-demand
   background: none 
   top: 30%
   right: 5%
+  background: white
 
 .filter-actions
   font-size: .8em
